apps/media/rtorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: rtorrent
    name: rtorrent
    namespace: media
spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: rtorrent
    template:
        metadata:
            labels:
                app: rtorrent
        spec:
            securityContext:
                fsGroup: 911
            containers:
                - image: jesec/rtorrent:0.9.8-r16
                  name: rtorrent
                  securityContext:
                      runAsUser: 911
                      runAsGroup: 911
                  ports:
                      - containerPort: 42069
                        name: bittorrent
                      - containerPort: 6881
                        protocol: UDP
                        name: dht
                      - containerPort: 6882
                        protocol: UDP
                        name: dht-alt
                  volumeMounts:
                      - name: rtorrent-state
                        mountPath: /config
                      - name: rtorrent-rc
                        mountPath: /config/.rtorrent.rc
                        subPath: .rtorrent.rc
                      - name: scgi-sock
                        mountPath: /sock
                      - name: media-volume
                        mountPath: /data
                - image: aauren/rtorrent-exporter:latest
                  name: rtorrent-exporter
                  command:
                      - /rtorrent-exporter
                      - --config
                      - /rtorrent-exporter.yaml
                  ports:
                      - containerPort: 9135
                        name: metrics
                  volumeMounts:
                      - name: rtorrent-exporter-config
                        mountPath: /rtorrent-exporter.yaml
                        subPath: rtorrent_exporter.yaml
                - image: nginxinc/nginx-unprivileged:stable-alpine-slim
                  name: nginx
                  ports:
                      - containerPort: 5000
                        name: xmlrpc
                  volumeMounts:
                      - name: scgi-sock
                        mountPath: /sock
                      - name: nginx-config
                        mountPath: /etc/nginx/conf.d/default.conf
                        subPath: default.conf
            volumes:
                - name: rtorrent-state
                  persistentVolumeClaim:
                      claimName: rtorrent-state
                - name: rtorrent-rc
                  configMap:
                      name: rtorrent-rc
                - name: scgi-sock
                  emptyDir:
                      medium: Memory
                  readOnly: true
                - name: rtorrent-exporter-config
                  secret:
                      secretName: rtorrent-exporter-config
                  readOnly: true
                - name: nginx-config
                  configMap:
                      name: rtorrent-nginx-config
                - name: media-volume
                  persistentVolumeClaim:
                      claimName: media-volume
